--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jdbc.url = jdbc:mysql://localhost:3306/ioniprog-dev
-jdbc.user = ioniprog
-jdbc.password = ioniprog
+jdbc.user = notExposePasswords
+jdbc.password = notExposePasswords
 
 packages.to.scan = com.ja.ioniprog.model.entity
 
